--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
         </div>
     </div>
 
-    <!-- -------------------------------------------------- -->
+    <!-- ----------------------------------------------------------------------------------------- -->
     <!-- About Section -->
     <div id="About">
         <div class="container">
@@ -93,7 +93,7 @@
         </div>
     </div>
 
-    <!-- ----------------------------------------------- -->
+    <!-- -------------------------------------------------------------------------------------------- -->
     <!-- Services Section -->
     <div id="Services">
     <div class="container">
@@ -121,6 +121,8 @@
         </div>
     </div>
 
+    <!-- --------------------------------------------------------------------- -->
+    <!-- Portfolio Section -->
     <div id="portfolio">
 
         <div class="container">
