--- a/index.html
+++ b/index.html
@@ -129,17 +129,57 @@
          <h1 class="sub-title">My Work</h1>
             <div class="work-list">
                 <div class="Work">
-                    <img src="images/photo-1563986768609-322da13575f3.jpg"> 
+                    <img src="images/photo-1563986768609-322da13575f3.jpg">
+                    <div class="layer">
+                        <h3> Social Media app </h3>
+                        <p>aal about thish website </p>
+                        <a href="#"><i class="fa-light fa-arrow-up-right-from-square"></i></a>
+                     </div>
                 </div>
 
                 <div class="Work">
                     <img src="images/photo-1563986768609-322da13575f3.jpg"> 
+                    <div class="layer">
+                        <h3> Onine shoping</h3>
+                        <p>aal about thish website </p>
+                        <a href="#"><i class="fa-light fa-arrow-up-right-from-square"></i></a>
+                     </div>
                 </div>
-
                 <div class="Work">
                     <img src="images/photo-1563986768609-322da13575f3.jpg"> 
+                    <div class="layer">
+                        <h3> mobile aap  </h3>
+                        <a href="#"><i class="fa-light fa-arrow-up-right-from-square"></i></a>
+                     </div>
                 </div>
             </div>
+            <a href="#" class="btn">See more</a>
+        </div>
+    </div>
+    <!--------------------contact----------------------->
+    <div id="contact">
+        <div class="container">
+         <div class="row">
+           <div class="contact-left">
+            <h1 class="sub-title">Contact Me</h1>
+            <p><i class="fa-solid fa-paper-plane"></i>Contact@example.com</p>
+            <p><i class="fa-solid fa-phone-volume"></i>0123456789</p>
+            <div class="Social-icon">
+                <a href=""><i class="fa-brands fa-facebook"></i></a>
+                <a href=""><i class="fa-brands fa-twitter-square"></i></a>
+                <a href=""><i class="fa-brands fa-instagram"></i></a>
+                <a href=""><i class="fa-brands fa-linkedin"></i></a>
+            </div>
+           </div>
+           <div class="contact-right">
+            <form>
+                <input type="text" name="Name" placeholder="Your Name" required>
+                <input type="email" name="email" placeholder="Your email" required>
+                <textarea name="Massage"  rows="6" placeholder=" Your Massage"></textarea>
+                <button type="submit">Submit</button>
+            </form>
+           </div>
+         </div>
         </div>
     </div>
 
