--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
                 <!-- List Items -->
                 <ul>
                     <li><a href="#"></a>Home</li>
-                    <li><a href="About"></a>About</li>
-                    <li><a href="Services"></a>Services</li>
-                    <li><a href="Contact"></a>Contact</li>
+                    <li><a href="#About"></a>About</li>
+                    <li><a href="#Services"></a>Services</li>
+                    <li><a href="#Contact"></a>Contact</li>
                 </ul>
             </nav>
 
@@ -153,7 +153,7 @@
                      </div>
                 </div>
             </div>
-            <a href="#" class="btn">See more</a>
+            <a href="#" class="btn btnNew">See more</a>
         </div>
     </div>
     <!--------------------contact----------------------->
@@ -170,16 +170,20 @@
                 <a href=""><i class="fa-brands fa-instagram"></i></a>
                 <a href=""><i class="fa-brands fa-linkedin"></i></a>
             </div>
+            <a href="" download class="btn bt2">Download CV</a>
            </div>
            <div class="contact-right">
             <form>
                 <input type="text" name="Name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Your email" required>
                 <textarea name="Massage"  rows="6" placeholder=" Your Massage"></textarea>
-                <button type="submit">Submit</button>
+                <button type="submit" class="btn btn2">Submit</button>
             </form>
            </div>
          </div>
+        </div>
+        <div class="copyright">
+            <P>Copyright @ Kamlesh. made with<i class="fa-solid fa-heart"></i> by Devlopment Website </P>
         </div>
     </div>
 
