--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
                      </div>
                 </div>
             </div>
-            <a href="#" class="btn btnNew">See more</a>
+            <a href="#" class="btn">See more</a>
         </div>
     </div>
     <!--------------------contact----------------------->
