--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
             <a href="" download class="btn bt2">Download CV</a>
            </div>
            <div class="contact-right">
-            <form>
+            <form class="Form">
                 <input type="text" name="Name" placeholder="Your Name" required>
                 <input type="email" name="email" placeholder="Your email" required>
                 <textarea name="Massage"  rows="6" placeholder=" Your Massage"></textarea>
