--- a/index.html
+++ b/index.html
@@ -174,9 +174,9 @@
            </div>
            <div class="contact-right">
             <form class="Form">
-                <input type="text" name="Name" placeholder="Your Name" required>
-                <input type="email" name="email" placeholder="Your email" required>
-                <textarea name="Massage"  rows="6" placeholder=" Your Massage"></textarea>
+                <input type="text" class="Input" name="Name" placeholder="Your Name" required>
+                <input type="email" class="Input"name="email" placeholder="Your email" required>
+                <textarea name="Massage" class="Textarea" rows="6" placeholder=" Your Massage"></textarea>
                 <button type="submit" class="btn btn2">Submit</button>
             </form>
            </div>
