--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
                 <a href=""><i class="fa-brands fa-instagram"></i></a>
                 <a href=""><i class="fa-brands fa-linkedin"></i></a>
             </div>
-            <a href="" download class="btn bt2">Download CV</a>
+            <a href="images/Kamlesh_Sursaut_Resume_2023.pdf" download class="btn btn2"> Download CV</a>
            </div>
            <div class="contact-right">
             <form class="Form">
